tests/failing/lifetime_return.tk
# tarik (c) Nikolas Wipper 2025
# /tk test
# /tk fail

fn test(i32 *a, i32 *b) i32* {
    if *a > *b {
        return a;
    } else {
        return b;
    }
}

fn test2() {
    i32 t = 3;
    i32 *p = &t;

    {
        i32 a = 4;
        i32 b = 5;

        # /tk error
        p = test(&a, &b);
    }

    *p;
}
